mixins, createElement, eventBus

--- a/【软件】知识库.md
+++ b/【软件】知识库.md
@@ -4,5 +4,8 @@
 插件3：Markdown Image 插入图片
 
 ### vue-devtools
+克隆地址：
 git clone -b v5.1.1 https://github.com/vuejs/vue-devtools.git
+
+教程：https://www.jianshu.com/p/312cd88f5bdf
 
