--- a/【项目】知识库.md
+++ b/【项目】知识库.md
@@ -158,24 +158,51 @@ new Vue({
 ### 4. 一个vue文件的基本框架
 ```
 <template>
-    <div class="">新文件</div>
+  <div class="page">新文件</div>
 </template>
 <script>
 export default {
   name: '',
-  data () {
+  data() {
     return {}
   },
-  methods: {},
-  created () { },
-  mounted () { },
+  methods: {}
 }
 </script>
 
-<style scoped lang='less'>
+<style lang='scss' scoped>
+.page {
+    width: 100px;
+}
 </style>
+
 
 ```
 
 ### 5. 报错：eslint 'process' is not defined
 https://stackoverflow.com/questions/50894000/eslint-process-is-not-defined/55604994
+
+### 6. 怎样快速上手项目
+第一步：准备工作
+1. 项目是做什么的：系统每一个分层模块，用到的技术，之间的通讯
+2. 了解公司的三个环境dev,test,online
+3. 遇到不会的技术先跳过，实战的时候参考老代码
+4. 快速熟悉前端的方法：访问路径的对象是哪些，接收数据的对象是哪些，渲染对象是哪些
+
+第二步：接口入手
+
+### 7. 装机必备
+1.谷歌浏览器
+https://www.pcsoft.com.cn/soft/14462.html
+2.搜狗输入法
+3.Git
+4.Wps
+5.Node
+6.cnpm 
+npm install -g cnpm --registry=https://registry.npm.taobao.org
+7.VSCode
+https://blog.csdn.net/Y_yunhu/article/details/114034088
+8.微信
+9.github网站问题解决
+https://github.com/521xueweihan/GitHub520
+10.devtools
