--- a/【软件】知识库.md
+++ b/【软件】知识库.md
@@ -9,3 +9,21 @@ git clone -b v5.1.1 https://github.com/vuejs/vue-devtools.git
 
 教程：https://www.jianshu.com/p/312cd88f5bdf
 
+### 装机必备
+1.谷歌浏览器
+https://www.pcsoft.com.cn/soft/14462.html
+2.搜狗输入法
+3.Git
+4.Wps
+5.Node
+6.cnpm 
+npm install -g cnpm --registry=https://registry.npm.taobao.org
+7.VSCode
+https://blog.csdn.net/Y_yunhu/article/details/114034088
+8.微信
+9.github网站问题解决
+https://github.com/521xueweihan/GitHub520
+10.devtools
+https://www.jianshu.com/p/312cd88f5bdf
+
+
