--- a/【1今日计划】.md
+++ b/【1今日计划】.md
@@ -4,10 +4,18 @@
 3. router里meta的module是用来做什么的
 
 ### 待学习
+el-data-picker的处理
+
+### 今日安排
+3.22
+// btnShow里的info是怎么设置的
+配置好格式化
+lodash lowdb 的使用
+
+
+安装vue-devtools
+
+3.21
 1. eventBus的使用
 2. Vue的函数式createElement
 3. Mixins的使用
-
-### 今日安排
-安装vue-devtools
-照葫芦画瓢，写出一个首推商品审核页面
