--- a/【项目】知识库.md
+++ b/【项目】知识库.md
@@ -1,6 +1,7 @@
 ### 项目格式化
 
-.prettierrc.json常用配置说明
+.prettierrc.json 常用配置说明
+
 ```
 {
   // tab缩进大小,默认为2
@@ -34,7 +35,9 @@
   "arrowParens": "avoid"
 }
 ```
-json文件是不能注释的，去掉注释后的代码
+
+json 文件是不能注释的，去掉注释后的代码
+
 ```
 {
   "tabWidth": 4,
@@ -48,7 +51,8 @@ json文件是不能注释的，去掉注释后的代码
 }
 ```
 
-semi的配置
+semi 的配置
+
 ```
 第一个参数：
 "off"或0-关闭规则
@@ -61,7 +65,9 @@ never：不允许加分号
 ```
 
 ### 一个配置好，可直接用的格式
+
 .eslintrc.js 文件
+
 ```
 // https://eslint.org/docs/user-guide/configuring
 
@@ -76,7 +82,7 @@ module.exports = {
   extends: [
     // https://github.com/vuejs/eslint-plugin-vue#priority-a-essential-error-prevention
     // consider switching to `plugin:vue/strongly-recommended` or `plugin:vue/recommended` for stricter rules.
-    'plugin:vue/essential', 
+    'plugin:vue/essential',
     // https://github.com/standard/standard/blob/master/docs/RULES-en.md
     "eslint:recommended"
   ],
@@ -96,39 +102,17 @@ module.exports = {
   }
 }
 ```
-VScode的setting文件
-```
-{
-    "name": "使用本机 Chrome 调试",
-    "type": "chrome",
-    "request": "launch",
-    "file": "${workspaceRoot}/index.html",
-    //  "url": "http://mysite.com/index.html", //使用外部服务器时,请注释掉 file, 改用 url, 并将 useBuildInServer 设置为 false "http://mysite.com/index.html
-    "runtimeExecutable": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe", // 改成您的 Chrome 安装路径
-    "sourceMaps": true,
-    "webRoot": "${workspaceRoot}",
-    //  "preLaunchTask":"build",
-    "userDataDir": "${tmpdir}",
-    "port": 5433,
-    "debug.allowBreakpointsEverywhere": true,
-    "editor.wordWrap": "on",
-    "markdown-preview-enhanced.automaticallyShowPreviewOfMarkdownBeingEdited": true,
-    // 在 VS Code 中开发Vue项目格式化代码时让函数名与圆括号直接有一个空格
-    "vetur.format.defaultFormatter.js": "vscode-typescript",
-    "javascript.format.insertSpaceBeforeFunctionParenthesis": true,
-    "vetur.format.defaultFormatterOptions": {
-        "prettier": {
-            "semi": false,  // 不要分号
-            "singleQuote": true     // 使用单引号
-        }
-    },
-}
-```
 
-### 引入Element-UI
+VScode 的 setting 文件
+怎么打开这个文件：安装 vuter 插件，vuter 插件的 config 里打开配置文件
+https://blog.csdn.net/weixin_36222137/article/details/80040758
+
+### 引入 Element-UI
+
 1. cnpm i element-ui -D
 2. cnpm i babel-plugin-component -D
 3. 将 .babelrc 修改为：
+
 ```
 "plugins": [
     [
@@ -140,7 +124,9 @@ VScode的setting文件
     ]
   ]
 ```
-4. 在main.js中写入以下内容
+
+4. 在 main.js 中写入以下内容
+
 ```
 import Vue from 'vue';
 import ElementUI from 'element-ui';
@@ -155,7 +141,8 @@ new Vue({
 });
 ```
 
-### 4. 一个vue文件的基本框架
+### 4. 一个 vue 文件的基本框架
+
 ```
 <template>
   <div class="page">新文件</div>
@@ -180,29 +167,34 @@ export default {
 ```
 
 ### 5. 报错：eslint 'process' is not defined
+
 https://stackoverflow.com/questions/50894000/eslint-process-is-not-defined/55604994
 
 ### 6. 怎样快速上手项目
+
 第一步：准备工作
+
 1. 项目是做什么的：系统每一个分层模块，用到的技术，之间的通讯
-2. 了解公司的三个环境dev,test,online
+2. 了解公司的三个环境 dev,test,online
 3. 遇到不会的技术先跳过，实战的时候参考老代码
 4. 快速熟悉前端的方法：访问路径的对象是哪些，接收数据的对象是哪些，渲染对象是哪些
 
 第二步：接口入手
 
 ### 7. 装机必备
+
 1.谷歌浏览器
-https://www.pcsoft.com.cn/soft/14462.html
-2.搜狗输入法
+https://www.pcsoft.com.cn/soft/14462.html 2.搜狗输入法
 3.Git
 4.Wps
 5.Node
-6.cnpm 
+6.cnpm
 npm install -g cnpm --registry=https://registry.npm.taobao.org
 7.VSCode
-https://blog.csdn.net/Y_yunhu/article/details/114034088
-8.微信
-9.github网站问题解决
+https://blog.csdn.net/Y_yunhu/article/details/114034088 8.微信
+9.github 网站问题解决
 https://github.com/521xueweihan/GitHub520
 10.devtools
+
+### 8.前端项目部署到服务器
+https://my.oschina.net/incess/blog/4863477
