--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -1,20 +1,56 @@
-## 一、基础类型
-### 1.1 Boolean类型
-```ts
-let cml:boolean = true
-// es5: let cml = true
-```
-### 1.2 Number类型
+```原始类型```：Number，String，Boolean，null，undefined，Symbol
+```引用类型```：Array，Function，Object
+typeScript在ES6的数据类型基础上，新增了以下数据类型:```void, any, never, 元组，枚举，高级类型```
+
+## 一、原始类型
+```ES6```: Number，String，Boolean，null，undefined，Symbol
+```TS```: void
+### 1.1 Number类型
 ```ts
 let cml:number = 1
 // es5: let cml = 1
 ```
-### 1.3 String类型
+
+### 1.2 String类型
 ```ts
 let cml:string = '1'
 // es5: let cml = '1'
 ```
-### 1.4 Array类型
+### 1.3 Boolean类型
+```ts
+let cml:boolean = true
+// es5: let cml = true
+```
+
+### 1.4 Null类型
+```ts
+let cml:null = null
+// es5: let cml = null
+```
+
+### 1.5 Undefined类型
+```ts
+let cml:undefined = undefined
+// es5: let cml = undefined
+```
+
+### 1.6 Symbol类型
+```ts
+const sym = Symbol();
+let obj = {
+  [sym]: "cml",
+};
+
+console.log(obj[sym]); // cml
+```
+```小结:```TS会做静态类型检查，当一个变量被定义了某种类型后，再赋值为其他类型的值时，则会有报错提示
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5b143a5ac2ec4f97b300758fb01aaf77~tplv-k3u1fbpfcp-watermark.image)
+
+```但是```当被重新赋值为null和undefined时，则不会报错，我因为null和undefined可以看成是所有类型的子集
+![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c296484da6f14e08ad26dfa66aa4ed01~tplv-k3u1fbpfcp-watermark.image)
+
+## 二、引用类型
+### 2.1 Array类型
 ```ts
 let cml:number[] = [1, 2, 3]
 // es5: let cml = [1, 2, 3]
@@ -22,6 +58,8 @@ let cml:number[] = [1, 2, 3]
 let cml:Array<number> = [1, 2, 3]
 // es5: let cml = [1, 2, 3]
 ```
+Object和Function后面讲，先看TS里新加的基本类型
+
 
 ### 1.5 enum枚举类型
 #### 1.5.1 数字的枚举
