--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -7,18 +7,18 @@ typeScript在ES6的数据类型基础上，新增了以下数据类型:```void, 
 ```TS```: void
 ### 1.1 Number类型
 ```ts
-let cml:number = 1
+let cml: number = 1
 // es5: let cml = 1
 ```
 
 ### 1.2 String类型
 ```ts
-let cml:string = '1'
+let cml: string = '1'
 // es5: let cml = '1'
 ```
 ### 1.3 Boolean类型
 ```ts
-let cml:boolean = true
+let cml: boolean = true
 // es5: let cml = true
 ```
 
@@ -43,26 +43,60 @@ let obj = {
 
 console.log(obj[sym]); // cml
 ```
+### 1.7 Void类型
+void类型可以被赋值为undefined和null，但是不能被赋值其他的，比如string
+```ts
+let cml:void = undefined
+// es5: let cml = undefined
+cml = null
+```
 ```小结:```TS会做静态类型检查，当一个变量被定义了某种类型后，再赋值为其他类型的值时，则会有报错提示
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5b143a5ac2ec4f97b300758fb01aaf77~tplv-k3u1fbpfcp-watermark.image)
 
 ```但是```当被重新赋值为null和undefined时，则不会报错，我因为null和undefined可以看成是所有类型的子集
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c296484da6f14e08ad26dfa66aa4ed01~tplv-k3u1fbpfcp-watermark.image)
 
-## 二、引用类型
-### 2.1 Array类型
+## 二、数组类型
+### 2.1 类型+方括号
 ```ts
-let cml:number[] = [1, 2, 3]
-// es5: let cml = [1, 2, 3]
+let cml: number[] = [1, 2, 3]
+// es5: let web = [1, 2, 3]
+let web: any[] = [1, '2', true]
 
-let cml:Array<number> = [1, 2, 3]
+```
+
+### 2.2 泛型
+```ts
+let cml: Array<number> = [1, 2, 3]
 // es5: let cml = [1, 2, 3]
 ```
-Object和Function后面讲，先看TS里新加的基本类型
 
+### 2.3 接口
+类数组： 内置对象：IArguments, NodeList, HTMLCollection
+```ts
+function web(name: string, age: number) {
+  let args: IArguments = arguments;
+  console.log(args);  // { '0': 'web', '1': 1 }
+}
+web('web', 1)
+```
 
-### 1.5 enum枚举类型
-#### 1.5.1 数字的枚举
+## 三、高级类型
+### 3.1 any类型
+any类型可以任意赋值，不写相当于any
+```ts
+let cml:any = '123'
+cml = 123
+```
+### 3.2 联合类型
+```ts
+let cml:string | number
+cml = '123'
+cml = 123
+```
+
+### 3.3 enum枚举类型
+ 数字的枚举
 ```ts
 enum Direction {
   NORTH, // 默认0
@@ -83,3 +117,73 @@ enum Direction1 {
   WEST, // 变成5
 }
 ```
+
+## 四、接口
+### 1. 确定属性
+```ts
+// 定义一个接口
+interface IPerson {
+  name: string,
+  age: number
+}
+
+// 实例化
+let p1: IPerson = {
+  name: 'web',
+  age: 18
+}
+```
+一个变量，如上面的p1，如果被声明为某一种接口的实例，则变量拥有的属性必须要和接口定义的一样，不能多也不能少，否则会报错。
+
+### 2. 可选属性
+```ts
+interface IPerson {
+  name: string,
+  age?: number
+}
+
+// 实例化
+let p1: IPerson = {
+  name: 'web',
+}
+```
+### 3. 任意属性
+```ts
+interface IPerson {
+  name: string,
+  [propName: string]: boolean | string
+}
+
+let p1: IPerson = {
+  name: '123',
+  married: false, // ok
+  country: '123' // ok
+  age: 123 // 报错
+}
+```
+如果设定了任意属性，那么所有的确定属性或者可选属性必须是任意属性的子集。
+
+### 4. 只读属性
+```ts
+interface IPerson {
+  readonly name: string,
+  age: number
+}
+
+let p1: IPerson = {
+  name: '123',
+  age: 18
+}
+
+let p2: IPerson = {
+  name: '456', // ok
+  age: 18
+}
+
+p1.name = '456' // 报错
+p1.age = 18
+```
+readonly，指的是如果不在每次对象赋值情况下，是不能修改值的。
+
+
+## 五、函数
