--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -187,3 +187,98 @@ readonly，指的是如果不在每次对象赋值情况下，是不能修改值
 
 
 ## 五、函数
+ES5里函数的声明和函数的表达式
+```TypeScript
+// 函数的声明
+function cml(x, y) {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+
+// 函数的表达式
+let cml = function(x, y) {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+```
+```TS里函数的声明```
+```TypeScript
+function cml(x: number, y: number): number {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+```
+```TS里函数的表达式```
+```TypeScript
+let cml = function(x: number, y: number): number {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+```
+但其实这里没有给cml定义函数的类型，完整的写法是这样的
+```TypeScript
+let cml: (x: number, y: number) => number = function(x: number, y: number): number {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+```
+函数的类型也可以写成接口的形式
+```TypeScript
+interface ICml {
+  (x: number, y: number): number
+}
+
+let cml: ICml = function(x: number, y: number) : number {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+```
+
+### 1.可选参数
+一个可选参数后面不能再有确定(必须)参数
+```TypeScript
+function cml(x: number, y?: number): number {
+  y = y || 0
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+console.log(cml(1))  // 1
+```
+
+### 2.剩余参数
+回忆一下ES5里的arguments和ES6里的args
+```ES5的arguments```
+```TypeScript
+function cml() {
+  let sum = 0
+  for(let item of arguments) {
+    sum = sum + item
+  }
+  return sum
+}
+console.log(cml(1, 2, 3)) // 6
+```
+```ES6的args```
+```TypeScript
+function cml(...args) {
+  let sum = 0
+  for(let item of args) {
+    sum = sum + item
+  }
+  return sum
+}
+console.log(cml(1, 2, 3)) // 6
+```
+```TS里的剩余参数```
+```TypeScript
+function cml(...args: number[]) {
+  let sum: number = 0
+  for(let i: number = 0; i < args.length; i ++) {
+    sum = sum + args[i]
+  }
+  return sum
+}
+console.log(cml(1, 2, 3)) // 6
+console.log(cml(1, '2', 3)) // 报错
+```
+
