--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -1,10 +1,10 @@
 ```原始类型```：Number，String，Boolean，null，undefined，Symbol
 ```引用类型```：Array，Function，Object
-typeScript在ES6的数据类型基础上，新增了以下数据类型:```void, any, never, 元组，枚举，高级类型```
+ts在ES6的数据类型基础上，新增了以下数据类型:```void, any, never, 元组，枚举，高级类型```
 
 ## 一、原始类型
 ```ES6```: Number，String，Boolean，null，undefined，Symbol
-```TS```: void
+```ts```: void
 ### 1.1 Number类型
 ```ts
 let cml: number = 1
@@ -50,7 +50,7 @@ let cml:void = undefined
 // es5: let cml = undefined
 cml = null
 ```
-```小结:```TS会做静态类型检查，当一个变量被定义了某种类型后，再赋值为其他类型的值时，则会有报错提示
+```小结:```ts会做静态类型检查，当一个变量被定义了某种类型后，再赋值为其他类型的值时，则会有报错提示
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5b143a5ac2ec4f97b300758fb01aaf77~tplv-k3u1fbpfcp-watermark.image)
 
 ```但是```当被重新赋值为null和undefined时，则不会报错，我因为null和undefined可以看成是所有类型的子集
@@ -94,7 +94,14 @@ let cml:string | number
 cml = '123'
 cml = 123
 ```
-
+```类型断言```
+是针对混合类型，为变量指定一个类型
+```ts
+function cml(a: number | string): void {
+  console.log(a.length) // 报错
+  console.log((<string>a).length) // OK
+}
+```
 ### 3.3 enum枚举类型
  数字的枚举
 ```ts
@@ -188,7 +195,7 @@ readonly，指的是如果不在每次对象赋值情况下，是不能修改值
 
 ## 五、函数
 ES5里函数的声明和函数的表达式
-```TypeScript
+```ts
 // 函数的声明
 function cml(x, y) {
   return x + y
@@ -201,29 +208,29 @@ let cml = function(x, y) {
 }
 console.log(cml(1, 2))  // 3
 ```
-```TS里函数的声明```
-```TypeScript
+```ts里函数的声明```
+```ts
 function cml(x: number, y: number): number {
   return x + y
 }
 console.log(cml(1, 2))  // 3
 ```
-```TS里函数的表达式```
-```TypeScript
+```ts里函数的表达式```
+```ts
 let cml = function(x: number, y: number): number {
   return x + y
 }
 console.log(cml(1, 2))  // 3
 ```
 但其实这里没有给cml定义函数的类型，完整的写法是这样的
-```TypeScript
+```ts
 let cml: (x: number, y: number) => number = function(x: number, y: number): number {
   return x + y
 }
 console.log(cml(1, 2))  // 3
 ```
 函数的类型也可以写成接口的形式
-```TypeScript
+```ts
 interface ICml {
   (x: number, y: number): number
 }
@@ -236,7 +243,7 @@ console.log(cml(1, 2))  // 3
 
 ### 1.可选参数
 一个可选参数后面不能再有确定(必须)参数
-```TypeScript
+```ts
 function cml(x: number, y?: number): number {
   y = y || 0
   return x + y
@@ -248,7 +255,7 @@ console.log(cml(1))  // 1
 ### 2.剩余参数
 回忆一下ES5里的arguments和ES6里的args
 ```ES5的arguments```
-```TypeScript
+```ts
 function cml() {
   let sum = 0
   for(let item of arguments) {
@@ -259,7 +266,7 @@ function cml() {
 console.log(cml(1, 2, 3)) // 6
 ```
 ```ES6的args```
-```TypeScript
+```ts
 function cml(...args) {
   let sum = 0
   for(let item of args) {
@@ -269,8 +276,9 @@ function cml(...args) {
 }
 console.log(cml(1, 2, 3)) // 6
 ```
-```TS里的剩余参数```
-```TypeScript
+
+```ts里的剩余参数```
+```ts
 function cml(...args: number[]) {
   let sum: number = 0
   for(let i: number = 0; i < args.length; i ++) {
