--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -2,9 +2,7 @@
 ```引用类型```：Array，Function，Object
 ts在ES6的数据类型基础上，新增了以下数据类型:```void, any, never, 元组，枚举，高级类型```
 
-## 一、原始类型
-```ES6```: Number，String，Boolean，null，undefined，Symbol
-```ts```: void
+## 一、类型
 ### 1.1 Number类型
 ```ts
 let cml: number = 1
@@ -55,9 +53,8 @@ cml = null
 
 ```但是```当被重新赋值为null和undefined时，则不会报错，我因为null和undefined可以看成是所有类型的子集
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c296484da6f14e08ad26dfa66aa4ed01~tplv-k3u1fbpfcp-watermark.image)
-
-## 二、数组类型
-### 2.1 类型+方括号
+### 1.8 数组
+```1 类型+方括号```
 ```ts
 let cml: number[] = [1, 2, 3]
 // es5: let web = [1, 2, 3]
@@ -65,13 +62,14 @@ let web: any[] = [1, '2', true]
 
 ```
 
-### 2.2 泛型
+```2 泛型```
 ```ts
 let cml: Array<number> = [1, 2, 3]
 // es5: let cml = [1, 2, 3]
 ```
 
-### 2.3 接口
+3 接口
+
 类数组： 内置对象：IArguments, NodeList, HTMLCollection
 ```ts
 function web(name: string, age: number) {
@@ -81,28 +79,82 @@ function web(name: string, age: number) {
 web('web', 1)
 ```
 
-## 三、高级类型
-### 3.1 any类型
+### 1.9 元组
+```ts
+let cml: [string, number] = ['666', 666]
+console.log(p) // [ '666', 666 ]
+```
+使用```下标```的方式，可以只对其中一项赋值，但是对```整个对象```赋值时，必须是完整的，且类型不能错，个数不能多也不能少
+```ts
+let cml: [string, number] = ['666', 666]
+cml[0] = '888'
+console.log(cml) // ['888', 666]
+cml[1] = 888
+console.log(cml) // ['888', 888]
+cml = ['888', 888]
+console.log(cml) // ['888', 888]
+cml = ['888', 888, '888'] // 报错
+```
+可以通过push的方式放入更多的元素
+```ts
+let cml: [string, number] = ['666', 666]
+cml.push('888')
+console.log(cml) // ['666', 666, '888']
+```
+
+### 1.10 any类型
 any类型可以任意赋值，不写相当于any
 ```ts
 let cml:any = '123'
 cml = 123
 ```
-### 3.2 联合类型
+### 1.11 联合类型
 ```ts
 let cml:string | number
 cml = '123'
 cml = 123
 ```
 ```类型断言```
-是针对混合类型，为变量指定一个类型
+是针对联合类型，可以通过断言为变量指定一个类型
 ```ts
 function cml(a: number | string): void {
   console.log(a.length) // 报错
   console.log((<string>a).length) // OK
 }
 ```
-### 3.3 enum枚举类型
+```类型别名```
+除了规定的string/number等类型，ts还支持自定义类型
+```ts
+type Cml = '666' | '888'
+function cmlFun(a: Cml): void {
+  console.log(a)
+}
+cmlFun('666') // OK
+cmlFun(666) // 报错
+```
+### 1.12 enum枚举类型
+基本用法
+```ts
+enum Gender {Male, Female}
+console.log(Gender) // {'0': 'Male', '1': 'Female', 'Male': 0, 'Female', 1}
+console.log(Gender['0']) // Male
+console.log(Gender['1']) // FeMale
+console.log(Gender['Male']) // 0
+console.log(Gender['Female']) // 1
+```
+对应的ES5的写法
+```ts
+// typescript
+enum Gender {Male, Female}
+
+// ES5
+var Gender;
+(function (Gender) {
+    Gender[Gender["Male"] = 0] = "Male";
+    Gender[Gender["Female"] = 1] = "Female";
+})(Gender || (Gender = {}));
+```
+
  数字的枚举
 ```ts
 enum Direction {
@@ -125,7 +177,7 @@ enum Direction1 {
 }
 ```
 
-## 四、接口
+## 二、接口
 ### 1. 确定属性
 ```ts
 // 定义一个接口
@@ -193,7 +245,8 @@ p1.age = 18
 readonly，指的是如果不在每次对象赋值情况下，是不能修改值的。
 
 
-## 五、函数
+## 三、函数
+### 1. 基本用法
 ES5里函数的声明和函数的表达式
 ```ts
 // 函数的声明
@@ -241,7 +294,7 @@ let cml: ICml = function(x: number, y: number) : number {
 console.log(cml(1, 2))  // 3
 ```
 
-### 1.可选参数
+### 2.可选参数
 一个可选参数后面不能再有确定(必须)参数
 ```ts
 function cml(x: number, y?: number): number {
@@ -252,7 +305,7 @@ console.log(cml(1, 2))  // 3
 console.log(cml(1))  // 1
 ```
 
-### 2.剩余参数
+### 3.剩余参数
 回忆一下ES5里的arguments和ES6里的args
 ```ES5的arguments```
 ```ts
