--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -34,12 +34,9 @@ let cml:undefined = undefined
 
 ### 1.6 Symbol类型
 ```ts
-const sym = Symbol();
-let obj = {
-  [sym]: "cml",
-};
-
-console.log(obj[sym]); // cml
+const s2: symbol = Symbol(); // ts
+const s1 = Symbol();  // es5
+console.log(s1 === s2) // false
 ```
 ### 1.7 Void类型
 void类型可以被赋值为undefined和null，但是不能被赋值其他的，比如string
@@ -51,9 +48,19 @@ cml = null
 ```小结:```ts会做静态类型检查，当一个变量被定义了某种类型后，再赋值为其他类型的值时，则会有报错提示
 ![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/5b143a5ac2ec4f97b300758fb01aaf77~tplv-k3u1fbpfcp-watermark.image)
 
-```但是```当被重新赋值为null和undefined时，则不会报错，我因为null和undefined可以看成是所有类型的子集
+```但是```
+1. 当被重新赋值为null和undefined时，则不会报错，因为null和undefined可以看成是所有类型的子集
 ![image.png](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c296484da6f14e08ad26dfa66aa4ed01~tplv-k3u1fbpfcp-watermark.image)
-### 1.8 数组
+2. 被定义为null和undefined类型的，只能赋值为它本身
+
+### 1.8 对象
+```ts
+// let cml: Object = {x: 1, y: 1} // 不能直接写Object，需要具体定义包含的属性以及对应的类型
+let cml: {x: number, y: number} = {x: 1, y: 1}
+cml.x = 2
+console.log(cml)
+```
+### 1.9 数组
 ```1 类型+方括号```
 ```ts
 let cml: number[] = [1, 2, 3]
@@ -79,10 +86,11 @@ function web(name: string, age: number) {
 web('web', 1)
 ```
 
-### 1.9 元组
+### 1.10 元组
+元组是一种特殊的数组，限定了数组的类型和个数
 ```ts
 let cml: [string, number] = ['666', 666]
-console.log(p) // [ '666', 666 ]
+console.log(cml) // [ '666', 666 ]
 ```
 使用```下标```的方式，可以只对其中一项赋值，但是对```整个对象```赋值时，必须是完整的，且类型不能错，个数不能多也不能少
 ```ts
@@ -95,20 +103,35 @@ cml = ['888', 888]
 console.log(cml) // ['888', 888]
 cml = ['888', 888, '888'] // 报错
 ```
-可以通过push的方式放入更多的元素
+元组的越界：可以通过push的方式放入更多的元素，可以push，但是仍然不能访问
 ```ts
 let cml: [string, number] = ['666', 666]
 cml.push('888')
 console.log(cml) // ['666', 666, '888']
+console.log(cml[2]) // 报错
 ```
 
-### 1.10 any类型
+### 1.11 any类型
 any类型可以任意赋值，不写相当于any
 ```ts
 let cml:any = '123'
 cml = 123
 ```
-### 1.11 联合类型
+
+### 1.12 never类型
+never 类型表示的是那些永不存在的值的类型。例如，never 类型是那些总是会抛出异常或根本就不会有返回值的函数表达式。
+```ts
+// 抛出异常的函数
+let error: never = () => {
+  throw new Error('error')
+}
+
+// 死循环函数
+let endLess: never = () => {
+  while(true) {}
+}
+```
+### 1.13 联合类型
 ```ts
 let cml:string | number
 cml = '123'
@@ -132,8 +155,8 @@ function cmlFun(a: Cml): void {
 cmlFun('666') // OK
 cmlFun(666) // 报错
 ```
-### 1.12 enum枚举类型
-基本用法
+### 1.14 enum枚举类型
+#### 1. 基本用法
 ```ts
 enum Gender {Male, Female}
 console.log(Gender) // {'0': 'Male', '1': 'Female', 'Male': 0, 'Female', 1}
@@ -155,7 +178,7 @@ var Gender;
 })(Gender || (Gender = {}));
 ```
 
- 数字的枚举
+#### 2. 数字的枚举
 ```ts
 enum Direction {
   NORTH, // 默认0
@@ -166,7 +189,7 @@ enum Direction {
 let dir: Direction = Direction.EAST;
 console.log('dir', dir) // 2
 ```
-默认为0,1,2,3...，如果自定义数字，则后面的枚举在前一个枚举值上递增
+默认为0,1,2,3...，如果自定义数字，则后面的枚举在前一个枚举值上加1
 
 ```ts
 enum Direction1 {
@@ -176,7 +199,75 @@ enum Direction1 {
   WEST, // 变成5
 }
 ```
+注意，自加的枚举数值，不保证和已经设定的数值不重合
+```ts
+enum Direction1 {
+  NORTH = 1,
+  SOUTH = 0,
+  EAST,
+  WEST,
+}
+console.log(Direction1)
+```
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9186adfac53347e0abee7e2859e5bc9d~tplv-k3u1fbpfcp-watermark.image)
 
+也可以把数字变成小数
+```ts
+enum Direction1 {
+  NORTH = 1.5,
+  SOUTH, // 2.5
+  EAST, // 3.5
+  WEST, // 4.5
+}
+console.log(Direction1)
+```
+#### 3. 字符串的枚举
+```ts
+enum Direction1 {
+  NORTH = 'a',
+  SOUTH = 'b', 
+  EAST = 'c', 
+  WEST = 'd', 
+}
+console.log(Direction1)  // { NORTH: 'a', SOUTH: 'b', EAST: 'c', WEST: 'd' }
+console.log(Direction1['NORTH']) // a
+console.log(Direction1['a'])  // undefined
+```
+
+#### 4. 常量枚举
+常量枚举是它是使用```const```关键字修饰的枚举,普通枚举有对象，常量枚举没有对象，对象实体只存在于TS中，当翻译为ES5代码时，被删除了。
+
+用途：当我们不需要这个对象，只需要对象里的值时，适用常量枚举，可以减少编译时的代码
+```ts
+// ts 代码
+const enum Gender {Male, Female}
+let cml: Gender = Gender['Female']
+console.log(cml)  // 1
+
+// ES5 代码
+var cml = 1 /* 'Female' */;
+console.log(cml);
+```
+
+#### 5. 异构枚举
+异构枚举的成员值是数字和字符串的混合：
+```ts
+enum Cml {
+  A,
+  B,
+  C = "c",
+  D = "d",
+  E = 8,
+  F,
+}
+```
+数字枚举和字符串枚举不同的是，数字枚举相对字符串枚举多了 “反向映射”：
+```ts
+console.log(Cml[0]) // A
+console.log(Cml['A']) // 0
+console.log(Cml['C']) // c
+console.log(Cml['c']) // undefined
+```
 ## 二、接口
 ### 1. 确定属性
 ```ts
@@ -342,4 +433,7 @@ function cml(...args: number[]) {
 console.log(cml(1, 2, 3)) // 6
 console.log(cml(1, '2', 3)) // 报错
 ```
+
+## 四、类和接口
+
 
