--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -337,42 +337,58 @@ readonly，指的是如果不在每次对象赋值情况下，是不能修改值
 
 
 ## 三、函数
-### 1. 基本用法
-ES5里函数的声明和函数的表达式
+### 1. 函数定义
+有4种方式定义函数
+1. 函数的声明
+2. 函数的表达式
+3. 类型别名
+4. 接口
+
+```函数的声明 ```
 ```TypeScript
-// 函数的声明
+// ES5函数的声明
 function cml(x, y) {
   return x + y
 }
 console.log(cml(1, 2))  // 3
 
-// 函数的表达式
-let cml = function(x, y) {
-  return x + y
-}
-console.log(cml(1, 2))  // 3
-```
-```TypeScript里函数的声明```
-```TypeScript
+// ts函数的声明
 function cml(x: number, y: number): number {
   return x + y
 }
 console.log(cml(1, 2))  // 3
+
 ```
-```TypeScript里函数的表达式```
+
+```函数的表达式```
 ```TypeScript
+// ES5函数的表达式
+let cml = function(x, y) {
+  return x + y
+}
+console.log(cml(1, 2))  // 3
+
+// ts函数的表达式
 let cml = function(x: number, y: number): number {
   return x + y
 }
 console.log(cml(1, 2))  // 3
 ```
-但其实这里没有给cml定义函数的类型，完整的写法是这样的
+
+```类型别名```
 ```TypeScript
-let cml: (x: number, y: number) => number = function(x: number, y: number): number {
+type cmlFun = function(x: number, y: number): number {
   return x + y
 }
+let cml: cmlFun = (a, b) => a + b
 console.log(cml(1, 2))  // 3
+
+type cmlFun = (x: number, y: number) => number
+let cml: cmlFun = (a, b) => a + b
+console.log(cml(1, 2))
 ```
+
+```接口定义函数```
 函数的类型也可以写成接口的形式
 ```TypeScript
 interface ICml {
