--- a/知识库.md
+++ b/知识库.md
@@ -483,8 +483,8 @@ class Son extends Father{
     }
 }
 
-let s = new Son('17807727381', '父类', '36')
-s.f() // this.name 父类
+let s = new Son('17807727381', '爸爸', '36')
+s.f() // this.name 爸爸
 ```
 ### 1. static关键字（ES6+）
 static静态属性和静态方法不能通过new的方式调用。
@@ -500,7 +500,7 @@ class Father {
     }
 }
   
-let fa = new Father('17807727381', '父类', '38')
+let fa = new Father('17807727381', '爸爸', '38')
 fa.f() // 报错
 
 Father.f()  // this.phone 17723812637
@@ -522,8 +522,8 @@ class Father {
   }
 }
 
-let fa = new Father('父类', 36) // 有构造函数，参数不能省略
-fa.f() // 父类 36
+let fa = new Father('爸爸', 36) // 有构造函数，参数不能省略
+fa.f() // 爸爸 36
 ```
 ### 3. protected关键字
 用于修饰类的属性以及方法，用protected修饰的属性和方法，只能由类或者子类的函数访问。
@@ -552,13 +552,13 @@ class Son extends Father{
         console.log('this.name', this.name)
     }
 }
-let fa = new Father('父类', 36)
-fa.f1() // this.name 父类 (父类通过函数访问： OK)
+let fa = new Father('爸爸', 36)
+fa.f1() // this.name 爸爸 (父类通过函数访问： OK)
 
-let s = new Son('17807727381', '父类', 36)
-s.f2() // this.name 父类 (子类通过函数访问： OK)
+let s = new Son('17807727381', '爸爸', 36)
+s.f2() // this.name 爸爸 (子类通过函数访问： OK)
 
-let fa = new Father('父类', 36)
+let fa = new Father('爸爸', 36)
 console.log(fa.name) // 报错
 console.log(fa.age) // 36
 ```
@@ -591,13 +591,13 @@ class Son extends Father{
         console.log('this.name', this.name)  // 报错
     }
 }
-let fa = new Father('父类', 36)
-fa.f1() // this.name 父类 (父类通过函数访问： OK)
+let fa = new Father('爸爸', 36)
+fa.f1() // this.name 爸爸 (父类通过函数访问： OK)
 
-let s = new Son('17807727381', '父类', 36)
+let s = new Son('17807727381', '爸爸', 36)
 s.f2() // 报错 (子类通过函数访问： 不OK)
 
-let fa = new Father('父类', 36)
+let fa = new Father('爸爸', 36)
 console.log(fa.name) // 报错
 console.log(fa.age) // 36
 ```
@@ -618,7 +618,7 @@ abstract class Father {
   }
 }
 
-let fa = new Father('父类', 36) // 报错
+let fa = new Father('爸爸', 36) // 报错
 fa.f() 
 ```
 抽象方法的使用, 如果子类继承的父类里有抽象方法，则需在子类里实现父类的抽象抽象方法
@@ -649,7 +649,7 @@ class Son extends Father{
   }
 }
 
-let fa: Father = new Son('17836762323', '父类', 36)
-fa.f1() // this.name 父类
+let fa: Father = new Son('17836762323', '爸爸', 36)
+fa.f1() // this.name 爸爸
 
 ```
