--- a/typescript/知识库.md
+++ b/typescript/知识库.md
@@ -1,3 +1,5 @@
+![image.png](https://p6-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/c743c1fe441a46dab7a5e2f05890b250~tplv-k3u1fbpfcp-watermark.image)
+
 ```原始类型```：Number，String，Boolean，null，undefined，Symbol
 ```引用类型```：Array，Function，Object
 TypeScript在ES6的数据类型基础上，新增了以下数据类型:```void, any, never, 元组，枚举，高级类型```
@@ -377,8 +379,8 @@ console.log(cml(1, 2))  // 3
 
 ```函数的别名```
 ```TypeScript
-type cmlFun = (x: number, y: number) => x + y
-let cml: Cml = (a, b) => a + b
+type cmlFun = (x: number, y: number) => number
+let cml: cmlFun = (a, b) => a + b
 console.log(cml(1, 2))  // 3
 ```
 
@@ -652,4 +654,118 @@ class Son extends Father{
 let fa: Father = new Son('17836762323', '父类', 36)
 fa.f1() // this.name 父类
 
+```
+
+## 五、类和接口的关系
+### 1. 类实现接口
+接口只声明成员方法，不做实现。
+类声明并实现方法。
+如果类实现了接口，必须实现接口里的方法。
+```TypeScript
+interface IA{
+    a: number;
+    b: string;
+    f(x: number):void;
+}
+
+interface IA2 {
+    c: number;
+    f2(x: number):void;
+}
+
+class A implements IA, IA2 {
+    a: number;
+    b: string;
+    c: number;
+    constructor(a: number, b: string, c: number){
+        this.a = a;
+        this.b = b;
+        this.c = c;
+    }
+    // 必须实现f()方法
+    f(x: number):void {
+        console.log(this.a, this.b);
+    }
+    // 必须实现f2()方法
+    f2(x: number):void {
+        console.log(this.c);
+    }
+}
+
+let p: A = new A(1, 'abcv', 2);
+let a: IA = p;
+a.f(1); // 1 'abcv'
+
+let b: IA2 = p;
+b.f2(2);  // 2
+```
+### 2. 接口继承接口
+```TypeScript
+interface IA {
+    a: number;
+    b: string;
+    f(x: number):void;
+}
+
+interface IA2 extends IA{
+    c: number;
+    f2(x: number):void;
+}
+
+class A implements IA2 {
+    a: number;
+    b: string;
+    c: number;
+    constructor(a: number, b: string, c: number){
+        this.a = a;
+        this.b = b;
+        this.c = c;
+    }
+    f(x: number):void {
+        console.log(this.a, this.b);
+    }
+    f2(x: number):void {
+        console.log(this.c);
+    }
+}
+
+let p: A = new A(1, 'abcv', 2);
+let ai: IA = p;
+ai.f(1); // 1 'abcv'
+
+let bi: IA2 = p;
+bi.f2(2);  // 2
+```
+
+### 3. 接口继承类
+```TypeScript
+class C1 {
+    a: number;
+    b: string;
+    f():void{
+        console.log('aaa');
+    }
+}
+
+interface I1 extends C1 {
+    c: number;
+}
+
+class C2 implements I1{
+    a: number;
+    b: string;
+    c: number;
+    constructor(a: number, b: string, c: number){
+        this.a = a;
+        this.b = b;
+        this.c = c;
+    }
+    f():void{
+        console.log(this.a, this.b);
+    }
+}
+
+let c: C2 = new C2(1, 'abcv', 2);
+let i: I1 = c;
+i.f(); // 1 'abcv'
 ```
